<resources>
    <string name="app_name">Notepad</string>

    <!-- Actions -->
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_select_all">Select all</string>
    <string name="action_share">Share</string>
    <string name="action_download">Download</string>
    <string name="action_upload">Upload</string>
    <string name="action_default">Default</string>

    <!-- MainActivity -->
    <string name="main_no_note">No notes available</string>

    <!-- Note list item -->
    <string name="note_last_update">Last update:</string>

    <!-- NoteActivity -->
    <string name="note_hint_title">Title</string>
    <string name="note_hint_content">Content</string>
    <string name="note_toolbar_title_create">Create new note</string>
    <string name="note_toolbar_title_edit">Edit note</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_github">https://github.com/Alkisum/Notepad/</string>

    <!-- General OwnCloud Operations -->
    <string name="operation_progress_init_msg">Preparing&#8230; (0%)</string>
    <string name="upload_writing_failure_title">File creation failed</string>
    <string name="upload_failure_title">Upload failed</string>
    <string name="download_failure_title">Download failed</string>
    <string name="download_success_feedback">Notes downloaded</string>
    <string name="download_no_file_feedback">No notes to be downloaded</string>
    <string name="download_reading_failure_title">File parsing failed</string>
    <string name="download_reading_msg">Reading data&#8230;</string>
    <string name="download_insert_failure_title">Insertion into database failed</string>
    <string name="download_inserting_msg">Inserting data&#8230;</string>
    <string name="upload_success_feedback">Note uploaded</string>

    <!-- Navigation drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_notes">Notes</string>
    <string name="nav_drawer_settings">Settings</string>

    <!-- SettingsActivity-->
    <string name="settings_title">Settings</string>

    <!-- Delete dialog -->
    <string name="delete_note_title">Delete note?</string>
    <string name="delete_notes_title">Delete notes?</string>
    <string name="delete_notes_message">Deleting notes cannot be undone</string>

    <!-- ColorPaletteDialog -->
    <string name="palette_primary_title">Choose primary color</string>
    <string name="palette_accent_title">Choose accent color</string>
    <string name="palette_color_desc">Color</string>
    <string name="palette_tick_desc">Current color</string>

</resources>
