<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.alkisum.android.cloudnotes.activities.NoteActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        android:title="@string/action_upload"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>

</menu>
